tdf#169532 Improve draw/impress export to svg with lots of bitmaps

use the svg <use> element to avoid exporting bitmaps more than once.
With this document we were exporting the same image hundreds of times.

Change-Id: I9c2501ce67c263720719bac3d801854b48740905
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/194344
Reviewed-by: Noel Grandin <noel.grandin@collabora.co.uk>
Tested-by: Jenkins